<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_forecast"
        android:layout_centerInParent="true"
        android:alpha="0.1"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px">
            <TextView
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/mon"/>
            <ImageView
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:src="@drawable/weather_1"/>
            <LinearLayout
                android:layout_width="370px"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="bottom|center"
                    android:text="@string/sunny"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="center"
                    android:text="5 - 10\u2103"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px">
            <TextView
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/tue"/>
            <ImageView
                android:layout_width="200px"
                android:layout_height="100px"
                android:src="@drawable/weather_16"/>
            <LinearLayout
                android:layout_width="370px"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="bottom|center"
                    android:text="@string/snowy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="center"
                    android:text="-1 - 3\u2103"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px">
            <TextView
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/wed"/>
            <ImageView
                android:layout_width="200px"
                android:layout_height="100px"
                android:src="@drawable/weather_18"/>
            <LinearLayout
                android:layout_width="370px"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="bottom|center"
                    android:text="@string/cloudy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="center"
                    android:text="2 - 3\u2103"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px">
            <TextView
                android:layout_width="200px"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center"
                android:text="@string/thu"/>
            <ImageView
                android:layout_width="200px"
                android:layout_height="100px"
                android:src="@drawable/weather_10"/>
            <LinearLayout
                android:layout_width="370px"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="bottom|center"
                    android:text="@string/windy"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:gravity="center"
                    android:text="5 - 7\u2103"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>